Use dokumenttipalvelu-service via internal balancer
This way it is more straight forward to use via
SSH pipes in test environments.
The endpoints used by valintalaskentakoostepalvelu
are not accessible from the outside.

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -1,7 +1,7 @@
 url-virkailija=https://${host.virkailija}
 url-ilb=${host.alb}
 
-baseurl-dokumenttipalvelu=${url-virkailija}
+baseurl-dokumenttipalvelu=${url-ilb}
 baseurl-authentication-service=${url-virkailija}
 baseurl-haku-app=${url-virkailija}
 baseurl-koodisto-service=${url-virkailija}
