fetchResourcesForOneLaskenta for ataru applications.

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -18,12 +18,15 @@ baseurl-valinta-tulos-service=${url-ilb}
 baseurl-valintapiste-service=${url-ilb}
 baseurl-viestintapalvelu=${url-virkailija}
 baseurl-oppijanumerorekisteri-service=${url-virkailija}
+baseurl-ataru=${url-virkailija}
 
 dokumenttipalvelu-service.dokumentit.uudelleennimea=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/uudelleennimea/$1
 dokumenttipalvelu-service.dokumentit.tallenna=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/tallenna
 
 oppijanumerorekisteri-service.s2s.henkilo.findOrCreateMultiple=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/s2s/henkilo/findOrCreateMultiple
 oppijanumerorekisteri-service.s2s.henkilo.findByPersonOidList=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/henkilo/henkiloPerustietosByHenkiloOidList
+
+ataru.applications.by-hakukohde=${baseurl-ataru}/lomake-editori/api/external/valintalaskenta
 
 haku-app.applications.syntheticapplication=${baseurl-haku-app}/haku-app/applications/syntheticApplication
 haku-app.applications.listfull=${baseurl-haku-app}/haku-app/applications/listfull
