Fixing tests and set java level to java 8 in pom.xml since the code uses java 8 features

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
   </parent>
   <properties>
     <organisaatio.api.version>2015-13</organisaatio.api.version>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
