--- a/pom.xml
+++ b/pom.xml
@@ -671,6 +671,12 @@
             <groupId>fi.vm.sade.valintaperusteet</groupId>
             <artifactId>sharedutils</artifactId>
         </dependency>
+    <dependency>
+      <groupId>fi.vm.sade.valintaperusteet</groupId>
+      <artifactId>sharedutils</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
