Helpful debugging hint
If you want to know from where do the configuration
files come from.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -9,6 +9,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSSX} %
 
 # Package specific logging configurations
 log4j.logger.org.springframework=WARN
+log4j.logger.org.springframework.context.support.PropertySourcesPlaceholderConfigurer=WARN
 log4j.logger.org.mockserver=WARN
 #log4j.logger.org.eclipse.jetty=DEBUG
 log4j.logger.fi.vm.sade.valinta.http.ExtractSuccessfullResponseCallback=OFF
