Oikea koodisto URL

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -36,6 +36,7 @@ haku-app.applications.state.passivate=${baseurl-haku-app}/haku-app/applications/
 
 koodisto-service.json.oid.koodi=${baseurl-koodisto-service}/koodisto-service/rest/json/$1/koodi
 koodisto-service.json.koodi.rinnasteinen=${baseurl-koodisto-service}/koodisto-service/rest/json/relaatio/rinnasteinen/$1
+koodisto-service.json.koodi=${baseurl-koodisto-service}/koodisto-service/rest/codeelement/$1/1
 koodisto-service.koodiuri=${baseurl-koodisto-service}/koodisto-service/rest/codeelement/$1
 
 ohjausparametrit-service.parametri=${baseurl-ohjausparametrit-service}/ohjausparametrit-service/api/v1/rest/parametri/$1
