--- a/pom.xml
+++ b/pom.xml
@@ -407,6 +407,11 @@
                 <version>1.3.8</version>
             </dependency>
             <dependency>
+                <groupId>io.reactivex</groupId>
+                <artifactId>rxjava-debug</artifactId>
+                <version>1.0.3</version>
+            </dependency>
+            <dependency>
                 <groupId>com.mysema.querydsl</groupId>
                 <artifactId>querydsl-apt</artifactId>
                 <version>${querydsl.version}</version>
@@ -722,6 +727,10 @@
         <dependency>
             <groupId>io.reactivex</groupId>
             <artifactId>rxjava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava-debug</artifactId>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
