Käytä master henkilöiden tietoja

--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -24,7 +24,7 @@ dokumenttipalvelu-service.dokumentit.uudelleennimea=${baseurl-dokumenttipalvelu}
 dokumenttipalvelu-service.dokumentit.tallenna=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/tallenna
 
 oppijanumerorekisteri-service.s2s.henkilo.findOrCreateMultiple=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/s2s/henkilo/findOrCreateMultiple
-oppijanumerorekisteri-service.s2s.henkilo.findByPersonOidList=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/henkilo/henkiloPerustietosByHenkiloOidList
+oppijanumerorekisteri-service.henkilo.masterHenkilosByOidList=${baseurl-oppijanumerorekisteri-service}/oppijanumerorekisteri-service/henkilo/masterHenkilosByOidList
 
 ataru.applications.by-hakukohde=${baseurl-ataru}/lomake-editori/api/external/valintalaskenta
 
