--- a/pom.xml
+++ b/pom.xml
@@ -370,6 +370,11 @@
     <dependencies>
         <dependency>
             <groupId>fi.vm.sade.java-utils</groupId>
+            <artifactId>opintopolku-jetty</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>fi.vm.sade.java-utils</groupId>
             <artifactId>opintopolku-spring-security</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
