OK-233 : Help debugging CAS traffic

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -14,3 +14,5 @@ log4j.logger.org.mockserver=WARN
 #log4j.logger.org.eclipse.jetty=DEBUG
 log4j.logger.fi.vm.sade.valinta.sharedutils.http.ExtractSuccessfullResponseCallback=OFF
 log4j.logger.org.apache.http.client.protocol.ResponseProcessCookies=ERROR
+
+#log4j.logger.fi.vm.sade.valinta.kooste.cas=DEBUG
