Ota käyttöön java-cas 0.6.0-SNAPSHOT

--- a/src/main/resources/oph-configuration/common.properties.template
+++ b/src/main/resources/oph-configuration/common.properties.template
@@ -72,24 +72,19 @@ cas.group-search-filter=(uniqueMember\={0})
 cas.sendRenew=false
 cas.user-search-base=ou\=people
 cas.user-search-filter=(|(mail\={0})(uid\={0}))
-cas.service.dokumenttipalvelu=https://${host.virkailija}/dokumenttipalvelu-service
-cas.service.seuranta=https://${host.virkailija}/seuranta-service
-cas.service.haku-service=https://${host.virkailija}/haku-app
-cas.service.ataru=https://${host.virkailija}/lomake-editori
-cas.service.koodisto-service=https://${host.virkailija}/koodisto-service
-cas.service.organisaatio-service=https://${host.virkailija}/organisaatio-service
-cas.service.ryhmasahkoposti-service=https://${host.virkailija}/ryhmasahkoposti-service
-cas.service.sijoittelu-service=https://${host.virkailija}/sijoittelu-service
+cas.service.dokumenttipalvelu=https://${host.virkailija}/dokumenttipalvelu-service/j_spring_cas_security_check
+cas.service.seuranta=https://${host.virkailija}/seuranta-service/j_spring_cas_security_check
+cas.service.haku-service=https://${host.virkailija}/haku-app/j_spring_cas_security_check
+cas.service.ataru=https://${host.virkailija}/lomake-editori/auth/cas
+cas.service.koodisto-service=https://${host.virkailija}/koodisto-service/j_spring_cas_security_check
+cas.service.organisaatio-service=https://${host.virkailija}/organisaatio-service/j_spring_cas_security_check
+cas.service.ryhmasahkoposti-service=https://${host.virkailija}/ryhmasahkoposti-service/j_spring_cas_security_check
 cas.service.valintalaskentakoostepalvelu=https://${host.virkailija}/valintalaskentakoostepalvelu
-cas.service.valintalaskenta-service=https://${host.virkailija}/valintalaskenta-laskenta-service
-cas.service.valintalaskenta-ui=https://${host.virkailija}/valintalaskenta-ui
-cas.service.valintaperusteet-service=https://${host.virkailija}/valintaperusteet-service
-cas.service.valintaperusteet-ui=https://${host.virkailija}/valintaperusteet-ui
-cas.service.valintarekisteri=https://${host.virkailija}/valintarekisteri
-cas.service.viestintapalvelu=https://${host.virkailija}/viestintapalvelu
-cas.service.suoritusrekisteri=https://${host.virkailija}/suoritusrekisteri
-cas.service.authentication-service=https://${host.virkailija}/authentication-service
-cas.service.oppijanumerorekisteri-service=https://${host.virkailija}/oppijanumerorekisteri-service
+cas.service.valintalaskenta-service=https://${host.virkailija}/valintalaskenta-laskenta-service/j_spring_cas_security_check
+cas.service.viestintapalvelu=https://${host.virkailija}/viestintapalvelu/j_spring_cas_security_check
+cas.service.suoritusrekisteri=https://${host.virkailija}/suoritusrekisteri/j_spring_cas_security_check
+cas.service.authentication-service=https://${host.virkailija}/authentication-service/j_spring_cas_security_check
+cas.service.oppijanumerorekisteri-service=https://${host.virkailija}/oppijanumerorekisteri-service/j_spring_cas_security_check
 dokumenttipalvelu.mongodb.dbname=dokumenttidb
 dokumenttipalvelu.mongodb.uri= {{ mongodb_dokumenttidb_uri | default("${mongodb.virkailija.uri}") }}/${dokumenttipalvelu.mongodb.dbname}
 flyway.initOnMigrate=true
