--- a/src/main/resources/valintalaskentakoostepalvelu-oph.properties
+++ b/src/main/resources/valintalaskentakoostepalvelu-oph.properties
@@ -19,6 +19,9 @@ baseurl-valintapiste-service=${url-ilb}
 baseurl-viestintapalvelu=${url-virkailija}
 baseurl-oppijanumerorekisteri-service=${url-virkailija}
 baseurl-ataru=${url-virkailija}
+baseurl-cas=${url-virkailija}
+
+cas.tickets=${baseurl-cas}/cas/v1/tickets
 
 dokumenttipalvelu-service.dokumentit.uudelleennimea=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/uudelleennimea/$1
 dokumenttipalvelu-service.dokumentit.tallenna=${baseurl-dokumenttipalvelu}/dokumenttipalvelu-service/resources/dokumentit/tallenna
