Ohjeista palvelun ajo paikallisesta
Näin palvelua voi ajaa testiympäristössä toimivia muita palveluita vasten.

--- a/pom.xml
+++ b/pom.xml
@@ -1047,6 +1047,24 @@ buildTtime=${maven.build.timestamp}
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <configuration>
+                        <mainClass>fi.vm.sade.valinta.kooste.ValintaKoosteJetty</mainClass>
+                        <classpathScope>test</classpathScope>
+                        <systemProperties>
+                            <systemProperty>
+                                <key>user.home</key>
+                                <value>${env.VALINTALASKENTAKOOSTEPALVELU_USER_HOME}</value>
+                            </systemProperty>
+                            <systemProperty>
+                                <key>valintakooste.port</key>
+                                <value>${env.VALINTALASKENTAKOOSTEPALVELU_PORT}</value>
+                            </systemProperty>
+                        </systemProperties>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
